--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-node_modules/
+node_modules
+
+/.cache
+/public/build
+/server/index.mjs
+/server/index.mjs.map
+/server/metafile.*
+/server/version.txt
+preferences.arc
+sam.json
+sam.yaml
+.env
